--- a/server/src/main/io/jrevolt/sysmon/server/index.html
+++ b/server/src/main/io/jrevolt/sysmon/server/index.html
@@ -1,10 +1,10 @@
 <head>
-    <script type="text/javascript" src="http://java.com/js/dtjava.js"></script>
+    <script type="text/javascript" src="https://java.com/js/dtjava.js"></script>
     <script>
         function deployIt() {
             dtjava.embed(
                     {
-                        id: "org.springframework.boot.loader.Main",
+                        id: "io.jrevolt.sysmon.browser.BrowserMain",
                         url: "index.jnlp",
                         width: "100%", height: "100%",
                         placeholder: "place"
